いろいろ変更

--- a/html/portfolio_ja.html
+++ b/html/portfolio_ja.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="top.css" type="text/css">
+  <link rel="stylesheet" href="../css/style.css" type="text/css">
   <title>Tsuji's Portfolio</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
         <p class="name"><b>辻永泰輔</b> (ツジナガタイスケ)</p>
         <p class="birthday"><u>2002年1月29日 (20)</u></p>
       </section>
-      <img class="face" src="media/myface.jpg">
+      <img class="face" src="../data/media/myface.jpg">
       <div class="info">
         <section class="comunity">
           <p class="ul-thema">コミュニティ</p>
